# stm32f1-reg-tutorial

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: AI协助.md  专业术语解释.md
src/hardware/: acr.rs  cfgr.rs  gpio.rs  mod.rs  syst.rs
