[package]
name = "stm32f1_reg_tutorial"
version = "0.1.0"
edition = "2021"


[lib]
name = "stm32f1_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# 提供 ARM Cortex-M 系列的寄存器访问和低级操作
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
# 提供启动代码和中断向量表
cortex-m-rt = "0.7.3"
# 提供嵌入式硬件抽象层（HAL）的通用接口
embedded-hal = {version = "1.0.0-rc.1", features = []}
# 提供 STM32F1 系列的寄存器访问和外设抽象
stm32f1 = {version = "0.15.1", features = ["rt", "stm32f103"]}
# 提供高效的日志和格式化功能
defmt = "0.3.5"
# 提供使用 RTT 通道输出日志的功能
defmt-rtt = "0.4.0"
# 提供在发生 panic 时打印日志的功能
panic-probe = {version = "0.3.1", features = ["print-defmt"]}


[dev-dependencies]
# 提供在嵌入式设备上运行测试的功能
defmt-test = "0.3"


[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
incremental = false
codegen-units = 1

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# [[bin]]
# name = "turns_led"
# path = "src/bin/gpio/turns_led.rs"
